--- a/Worldprojections/worldprojections copy.html
+++ b/Worldprojections/worldprojections copy.html
@@ -86,4 +86,10 @@ map and then add on indicatrices to the map to display the degree of distortion 
     </a>
 
     
+    <h2>Data used for project</h2>
+    <a href="./data/naturalearth/ne_10m_admin_0_countries.shp">
+
+        
+   
+   
    
